# Paramora

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: backend_request.yml  bug_report.yml  config.yml  docs.yml  feature_request.yml
benchmarks/: README.md  bench_parse.py  fixtures.py  profile_parse.py
docs/: README.md  contracts.md  development.md  errors.md  mongodb.md  profiling-and-rust.md  python-support.md  query-syntax.md  quickstart.md  sql.md  testing.md  usage.md
paramora/: __init__.py  coercion.py  compiled.py  contracts.py  errors.py  fields.py  query_ast.py  query_modes.py  query_parser.py  schema.py
paramora/emitters/: __init__.py  base.py  mongo.py  sql.py
tests/: conftest.py  test_coercion.py  test_contracts.py  test_emitters.py  test_fastapi_integration.py  test_internal_edges.py  test_mongo_mongomock.py  test_parser.py  test_sql_emitter.py  test_sql_sqlite.py
