[project]
name = "paramora"
version = "0.2.0"
description = "Safe typed query compilation for FastAPI."
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Ehsan Ahmadzadeh", email = "amirehsansolout@gmail.com" }]
maintainers = [{ name = "Ehsan Ahmadzadeh", email = "amirehsansolout@gmail.com" }]
license = "MIT"
keywords = [
    "fastapi",
    "query-parameters",
    "mongodb",
    "query-compiler",
    "validation",
    "typed",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27",
    "mongomock>=4.3",
    "pytest>=9.0.3",
    "pytest-cov>=7.0",
]
dev = [
    "httpx>=0.27",
    "mongomock>=4.3",
    "pyright>=1.1.400",
    "pytest>=9.0.3",
    "pytest-cov>=7.0",
    "ruff>=0.14.0",
]

[project.urls]
Homepage = "https://github.com/EhsanAhmadzadeh/Paramora"
Repository = "https://github.com/EhsanAhmadzadeh/Paramora"
Issues = "https://github.com/EhsanAhmadzadeh/Paramora/issues"
Documentation = "https://github.com/EhsanAhmadzadeh/Paramora/tree/main/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["paramora"]

[tool.hatch.build.targets.sdist]
include = [
    "/paramora",
    "/pyproject.toml",
    "/uv.lock",
]
exclude = [
    "**/__pycache__",
    "*.pyc",
    ".coverage",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "dist",
]

[tool.pytest.ini_options]
minversion = "9.0"
pythonpath = ["."]
testpaths = ["tests"]
addopts = [
    "--strict-config",
    "--strict-markers",
    "-ra",
    "--cov=paramora",
    "--cov-report=term-missing",
]
xfail_strict = true
filterwarnings = [
    "error",
]

[tool.coverage.run]
source = ["paramora"]
omit = ["*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 90
exclude_also = [
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["paramora", "tests", "benchmarks"]

[tool.ruff.lint]
select = [
    "A",      # flake8-builtins
    "ARG",    # flake8-unused-arguments
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "COM",    # flake8-commas
    "D",      # pydocstyle
    "E",      # pycodestyle errors
    "EM",     # flake8-errmsg
    "ERA",    # eradicate commented-out code
    "F",      # pyflakes
    "FA",     # flake8-future-annotations
    "FBT",    # flake8-boolean-trap
    "I",      # isort
    "ICN",    # flake8-import-conventions
    "ISC",    # flake8-implicit-str-concat
    "N",      # pep8-naming
    "PERF",   # perflint
    "PIE",    # flake8-pie
    "PL",     # pylint
    "PT",     # flake8-pytest-style
    "PTH",    # flake8-use-pathlib
    "PYI",    # flake8-pyi
    "RET",    # flake8-return
    "RUF",    # Ruff-specific rules
    "SIM",    # flake8-simplify
    "T20",    # flake8-print
    "TC",     # flake8-type-checking
    "TRY",    # tryceratops
    "UP",     # pyupgrade
    "W",      # pycodestyle warnings
]
ignore = [
    "COM812",  # Conflicts with formatter.
    "D100",    # Missing docstring in public module.
    "D104",    # Missing docstring in public package.
    "D107",    # Missing docstring in __init__.
    "EM101",   # Allow literal exception messages.
    "EM102",   # Allow f-string exception messages.
    "TRY003",  # Avoid over-abstracting exception messages in MVP.
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D",       # Tests do not need public API docstrings.
    "PLR2004", # Magic values are acceptable in tests.
    "S101",    # assert is required in pytest tests.
]
"benchmarks/**/*.py" = [
    "T201",    # Profiling scripts intentionally print reports.
]
"paramora/emitters/mongo.py" = [
    "A003",    # PyMongo-compatible API intentionally uses `filter`.
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["paramora"]

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.pyright]
include = ["paramora", "tests", "benchmarks"]
exclude = [
    "**/__pycache__",
    ".venv",
    "dist",
    "build",
]
pythonVersion = "3.14"
pythonPlatform = "All"
typeCheckingMode = "strict"

reportMissingImports = "error"
reportMissingTypeStubs = "warning"
reportUnknownParameterType = "error"
reportUnknownArgumentType = "error"
reportUnknownMemberType = "error"
reportUnknownVariableType = "error"
reportUnknownLambdaType = "error"
reportUntypedFunctionDecorator = "warning"
reportPrivateUsage = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"

[dependency-groups]
dev = [
    "httpx>=0.27",
    "mongomock>=4.3",
    "pyright>=1.1.400",
    "pytest>=9.0.3",
    "pytest-cov>=7.0",
    "ruff>=0.14.0",
]
